Places Search Field correct size on mobile

--- a/src/components/Forms/SearchPlaces/style.module.less
+++ b/src/components/Forms/SearchPlaces/style.module.less
@@ -18,7 +18,6 @@
 .inputContainer {
   position: relative;
   width: @inputWidth;
-  margin-right: 2rem;
   // TODO: Check if ok for profile
   margin-top: @inputButtonMargin;
   margin-bottom: @inputButtonMargin;
